# multiparser

./: README.md  pyproject.toml  setup.py
multiparser/: check.py  main.py  tasks_handler.py  thread_parser.py
multiparser/custom_exceptions/: cex.py
multiparser/html_parsers/: search_parser.py
src/multiparser/core/: mthread_driver.py  parser.py  request.py  requests_handler.py  single_driver.py  speedometer.py
src/multiparser/custom_exceptions/: cex.py
src/multiparser/drivers/: binance.py
src/multiparser/parsers/: binance.py
src/tests/: app.py  main.py
