[tool.poetry]
name = "multiparser"
version = "0.1.0"
description = ""
authors = ["codepause"]
readme = "README.md"
packages = [{ include = "multiparser", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
